--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html lang="en">
   <head>
-    <link rel="stylesheet" media="screen" type="text/css" href="style/style.css">
+    <link rel="stylesheet" media="screen" type="text/css" href="style.css">
   </head>
   <body>
-    <div id="canvas"></div>
-    <script src="libs/jquery-1.10.1.min.js"></script>
-    <script src="libs/p5.js"></script>
-    <script src="js/anim.js"></script>
+      <canvas id="canvas"></canvas>
+     <img id="embedly-logo" src="embedly.png">
+    <script src="jquery.js"></script>
+    <script src="anim.js"></script>
   </body>
 </html>
